--- a/src/entries/popup/index.html
+++ b/src/entries/popup/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rainbow Wallet</title>
-    <script src="./vendor/trezor-connect.js" type="text/javascript"></script>
-  </head>
 
-  <body>
-    <div id="app" tabindex="-1"></div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Rainbow Wallet</title>
+  <script src="./vendor/trezor-connect.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <div id="app" tabindex="-1"></div>
+</body>
+
 </html>
