--- a/src/entries/popup/index.html
+++ b/src/entries/popup/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rainbow Wallet</title>
   <script src="./vendor/trezor-connect.js" type="text/javascript"></script>
+  <script src="./theming.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div id="app" tabindex="-1"></div>
+  <script src="./themingBody.js" type="text/javascript"></script>
 </body>
 
 </html>
