fix: resolve initial connection handshake issue when using background handlers

--- a/src/entries/popup/index.html
+++ b/src/entries/popup/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rainbow Wallet</title>
-  <script src="./vendor/trezor-connect-webextension.js" type="text/javascript"></script>
+  <script src="./vendor/trezor-connect-webextension-proxy.js" type="text/javascript"></script>
+  <script src="./vendor/trezor-connect-manager.js" type="module"></script>
 </head>
 
 <body>
