--- a/src/entries/popup/index.html
+++ b/src/entries/popup/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Rainbow Wallet</title>
   <script src="./vendor/trezor-connect-webextension-proxy.js" type="text/javascript"></script>
-  <script src="./vendor/trezor-connect-manager.js" type="module"></script>
+  <!-- <script src="./vendor/trezor-connect-manager.js" type="module"></script> -->
 </head>
 
 <body>
